Moved layout files to app resources

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -54,12 +54,12 @@
 	<!-- end of header bar -->
 
 	<section id="secondary_bar">
-		{% include "ArcticAssetBundle::user.html.twig" %}
-		{% include "ArcticAssetBundle::breadcrumbs.html.twig" %}
+		{% include "::user.html.twig" %}
+		{% include "::breadcrumbs.html.twig" %}
 	</section>
 	<!-- end of secondary bar -->
 
-	<aside id="sidebar" class="column">{% include "ArcticAssetBundle::sidebar.html.twig" %}</aside>
+	<aside id="sidebar" class="column">{% include "::sidebar.html.twig" %}</aside>
 	<!-- end of sidebar -->
 
 	<section id="main" class="column">
