--- a/src/Arctic/AssetBundle/Resources/views/Asset/new_asset.html.twig
+++ b/src/Arctic/AssetBundle/Resources/views/Asset/new_asset.html.twig
@@ -1,4 +1,4 @@
-{% extends 'ArcticAssetBundle::base.html.twig' %}
+{% extends '::base.html.twig' %}
 
 {% block content %}
 <article class="module width_full">
