--- a/app/Resources/views/user.html.twig
+++ b/app/Resources/views/user.html.twig
@@ -1,8 +1,14 @@
 <div class="user">
 	<p>
-		John Doe (
-		<a href="#">3 Messages</a>
-		)
+		{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+			<a href="{{ path('fos_user_profile_show') }}">
+				{% if app.user.name is defined %}
+					{{ app.user.name }}
+				{% else %}
+					{{ app.user.username }}
+				{% endif %}
+			</a>
+		{% endif %}
 	</p>
-	<a class="logout_user" href="#" title="Logout">Logout</a>
+	<a class="logout_user" href="{{ path('fos_user_security_logout') }}" title="Logout">Logout</a>
 </div>
