Changed sidebar links to be relative not absolute

--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -25,7 +25,7 @@
 		<a href="#">View Users</a>
 	</li>
 	<li class="icn_profile">
-		<a href="{{ url('fos_user_profile_show') }}">Your Profile</a>
+		<a href="{{ path('fos_user_profile_show') }}">Your Profile</a>
 	</li>
 </ul>
 <h3>Media</h3>
@@ -52,7 +52,7 @@
 		<a href="#">Security</a>
 	</li>
 	<li class="icn_jump_back">
-		<a href="{{ url('fos_user_security_logout') }}">Logout</a>
+		<a href="{{ path('fos_user_security_logout') }}">Logout</a>
 	</li>
 </ul>
 
