Fixed title link in base layout

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,7 +46,7 @@
 	<header id="header">
 		<hgroup>
 			<h1 class="site_title">
-				<a href="index.html">ArcticAsset</a>
+				<a href="{{ path('arctic_asset_default_index') }}">ArcticAsset</a>
 			</h1>
 			<h2 class="section_title">{% if title is defined %}{{title}}{% endif %}</h2>
 		</hgroup>
