--- a/app/Resources/views/Form/fields.html.twig
+++ b/app/Resources/views/Form/fields.html.twig
@@ -1,9 +1,9 @@
 {% block field_row %}
 {% spaceless %}
-    <div class="form_row">
+    <fieldset>
         {{ form_label(form) }}
         {{ form_errors(form) }}
         {{ form_widget(form) }}
-    </div>
+    </fieldset>
 {% endspaceless %}
 {% endblock field_row %}
