--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,76 +1,73 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html class="no-js">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>ArcticAsset {% if title is defined %}- {{title}}{% endif %}</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<head>
-	<meta charset="utf-8"/>
-	<title>ArcticAsset {% if title is defined %}- {{title}}{% endif %}</title>
-	{% block stylesheets %}
-	<link rel="stylesheet" href="{{ asset('css/layout.css') }}" type="text/css" media="screen" />
-	{% endblock %}
-	<!--[if lt IE 9]>
-	<link rel="stylesheet" href="{{ asset('css/ie.css') }}" type="text/css" media="screen" />
-	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
-	{% block javascripts %}
-	<script src="{{ asset('js/jquery-1.5.2.min.js') }}" type="text/javascript"></script>
-	<script src="{{ asset('js/hideshow.js') }}" type="text/javascript"></script>
-	<script src="{{ asset('js/jquery.tablesorter.min.js') }}" type="text/javascript"></script>
-	<script type="text/javascript" src="{{ asset('js/jquery.equalHeight.js') }}"></script>
-	{% endblock %}
-	<script type="text/javascript">
-		$(document).ready(function() {
-			//When page loads...
-			$(".tab_content").hide(); //Hide all content
-			$("ul.tabs li:first").addClass("active").show(); //Activate first tab
-			$(".tab_content:first").show(); //Show first tab content
+        {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" type="text/css" media="screen" />
+        <link rel="stylesheet" href="{{ asset('css/bootstrap-responsive.min.css') }}" type="text/css" media="screen" />
+        <link rel="stylesheet" href="{{ asset('css/main.css') }}" type="text/css" media="screen" />
+        {% endblock %}
+        <style>
+          body {
+            padding-top: 60px;
+            padding-bottom: 40px;
+          }
+        </style>
 
-			//On Click Event
-			$("ul.tabs li").click(function() {
+        <script src="{{ asset('js/vendor/modernizr-2.6.1-respond-1.1.0.min.js') }}" type="text/javascript"></script>
 
-				$("ul.tabs li").removeClass("active"); //Remove any "active" class
-				$(this).addClass("active"); //Add "active" class to selected tab
-				$(".tab_content").hide(); //Hide all tab content
+        <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+        <!--[if lt IE 9]>
+          <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+    </head>
+    <body>
 
-				var activeTab = $(this).find("a").attr("href"); //Find the href attribute value to identify the active tab + content
-				$(activeTab).fadeIn(); //Fade in the active ID content
-				return false;
-			});
-			$(".tablesorter").tablesorter();
-			$('.column').equalHeight();
-		});
-    </script>
-</head>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+          <div class="navbar-inner">
+            <div class="container-fluid">
+              <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </a>
+              <a class="brand" href="index.html">Arctic Asset</a>
+              <div class="nav-collapse collapse">
+                {% include "::user.html.twig" %}
+                
+                <ul class="nav">
+                  <li class="active"><a href="{{ path('arctic_asset_default_index') }}">Dashboard</a></li>
+                  <li><a href="{{ path('arctic_ticket_default_tickets') }}">Tickets</a></li>
+                  <li><a href="{{ path('arctic_asset_asset_index') }}">Assets</a></li>
+                </ul>
+                <form class="navbar-search">
+                  <input type="text" class="search-query" placeholder="Search">
+                </form>
+              </div><!--/.nav-collapse -->
+            </div>
+          </div>
+        </div>
 
-<body>
+        <div class="container-fluid">
+          {% block content %}{% endblock %}
 
-	<header id="header">
-		<hgroup>
-			<h1 class="site_title">
-				<a href="{{ path('arctic_asset_default_index') }}">ArcticAsset</a>
-			</h1>
-			<h2 class="section_title">{% if title is defined %}{{title}}{% endif %}</h2>
-		</hgroup>
-	</header>
-	<!-- end of header bar -->
+          <hr>
 
-	<section id="secondary_bar">
-		{% include "::user.html.twig" %}
-		{% include "::breadcrumbs.html.twig" %}
-	</section>
-	<!-- end of secondary bar -->
+          <footer>
+            <p>&copy; Arctic Solutions 2012</p>
+          </footer>
 
-	<aside id="sidebar" class="column">{% include "::sidebar.html.twig" %}</aside>
-	<!-- end of sidebar -->
+        </div><!--/.fluid-container-->
 
-	<section id="main" class="column">
-		{% if app.session.hasFlash('info') %}<h4 class="alert_info">{{ app.session.flash('info') }}</h4>{% endif %}
-		{% if app.session.hasFlash('warning') %}<h4 class="alert_warning">{{ app.session.flash('warning') }}</h4>{% endif %}
-		{% if app.session.hasFlash('error') %}<h4 class="alert_error">{{ app.session.flash('error') }}</h4>{% endif %}
-		{% if app.session.hasFlash('success') %}<h4 class="alert_success">{{ app.session.flash('success') }}</h4>{% endif %}
-
-		{% block content %}{% endblock %}
-	</section>
-
-</body>
-
+        {% block javascripts %}
+        <script src="{{ asset('js/vendor/jquery-1.8.0.min.js') }}" type="text/javascript"></script>
+        <script src="{{ asset('js/vendor/bootstrap.min.js') }}" type="text/javascript"></script>
+        <script src="{{ asset('js/main.js') }}" type="text/javascript"></script>
+        {% endblock %}
+    </body>
 </html>
