--- a/src/Arctic/UserBundle/Resources/views/Registration/confirmed.html.twig
+++ b/src/Arctic/UserBundle/Resources/views/Registration/confirmed.html.twig
@@ -1,16 +1,22 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
-	<article class="module width_full">
-		<header>
-			<h3>{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}</h3>
-		</header>
-		<div class="module_content">
-			<p>{{ 'registration.confirmed'|trans({'%username%': user.name}, 'FOSUserBundle') }}</p>
-			{% if app.session is not empty %}
-		        {% set targetUrl = app.session.get('_security.target_path') %}
-		        {% if targetUrl is not empty %}<p><a href="{{ targetUrl }}">{{ 'registration.back'|trans({}, 'FOSUserBundle') }}</a></p>{% endif %}
-		    {% endif %}
-		</div>
-	</article>
+<div class="row-fluid">
+	<div class="span4 whiteBackground greyBorder roundedCorners padding15px">
+		<h3>{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}</h3>
+		<p>
+			{{ 'registration.confirmed'|trans({'%username%': user.name}, 'FOSUserBundle') }}
+		</p>
+		{% if app.session is not empty %}
+	        {% set targetUrl = app.session.get('_security.target_path') %}
+	        {% if targetUrl is not empty %}
+				<p>
+					<a href="{{ targetUrl }}">{{ 'registration.back'|trans({}, 'FOSUserBundle') }}</a>
+				</p>
+			{% endif %}
+	    {% endif %}
+	</div>
+	<!--/span-->
+</div>
+<!--/row-->
 {% endblock fos_user_content %}
