--- a/src/Arctic/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Arctic/UserBundle/Resources/views/Security/login.html.twig
@@ -1,97 +1,33 @@
-<!DOCTYPE html>
-<html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>ArcticAsset {% if title is defined %}- {{title}}{% endif %}</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends 'ArcticUserBundle::userbase.html.twig' %}
 
-        {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" type="text/css" media="screen" />
-        <link rel="stylesheet" href="{{ asset('css/bootstrap-responsive.min.css') }}" type="text/css" media="screen" />
-        <link rel="stylesheet" href="{{ asset('css/main.css') }}" type="text/css" media="screen" />
-        {% endblock %}
-        <style>
-          body {
-            padding-top: 60px;
-            padding-bottom: 40px;
-          }
-        </style>
-
-        <script src="{{ asset('js/vendor/modernizr-2.6.1-respond-1.1.0.min.js') }}" type="text/javascript"></script>
-
-        <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-        <!--[if lt IE 9]>
-          <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-    </head>
-    <body>
-        <div class="container login">
-          <div class="row">
-            <div class="whiteBackground greyBorder roundedCorners padding15px">
-              <form class="form-horizontal" id="login" action="{{ path("fos_user_security_check") }}" method="post">
-              	<input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-                <legend>Login</legend>
-                <div class="control-group">
-                  <label class="control-label" for="inputUsername">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-                  <div class="controls">
-                    <input type="text" id="inputUsername" name"_username" value="{{ last_username }}" autofocus required>
-                  </div>
-                </div>
-                <div class="control-group">
-                  <label class="control-label" for="inputPassword">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-                  <div class="controls">
-                    <input type="password" id="inputPassword" name="_password" required>
-                  </div>
-                </div>
-                <div class="control-group">
-                  <div class="controls">
-                    <label class="checkbox">
-                      <input type="checkbox" name="_remember_me"> {{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}
-                    </label>
-                    <button type="submit" name="_submit" class="btn btn-primary">{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}</button>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-          <hr>
-
-          <footer>
-            <p class="pull-left">&copy; Arctic Solutions 2012</p>
-            <p class="pull-right"><a href="{{ path('fos_user_registration_register') }}">{{ 'layout.register'|trans({}, 'FOSUserBundle') }}</a></p>
-          </footer>
-
-        </div><!--/.fluid-container-->
-
-        {% block javascripts %}
-        <script src="{{ asset('js/vendor/jquery-1.8.0.min.js') }}" type="text/javascript"></script>
-        <script src="{{ asset('js/vendor/bootstrap.min.js') }}" type="text/javascript"></script>
-        <script src="{{ asset('js/main.js') }}" type="text/javascript"></script>
-        {% endblock %}
-    </body>
-</html>
-
-<!--
-<body>
-	<form id="login" action="{{ path("fos_user_security_check") }}" method="post">
-		<input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-	    <h1>Log In</h1>
-	    <fieldset id="errors">
-	    	{% if error %}<h4 class="alert_error">{{ error|trans({}, 'FOSUserBundle') }}</h4>{% endif %}
-	    </fieldset>
-	    <fieldset id="inputs">
-	        <input class="username" name="_username" type="text" placeholder="{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}" value="{{ last_username }}" autofocus required>   
-	        <input class="password" name="_password" type="password" placeholder="{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}" required>
-	        <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-			<label for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
-	    </fieldset>
-	    <fieldset id="actions">
-	        <input type="submit" id="submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
-			<a href="{{ path('fos_user_registration_register') }}">{{ 'layout.register'|trans({}, 'FOSUserBundle') }}</a>
-	    </fieldset>
-	</form>
-</body>
-</html>
--->
+{% block content %}
+<div class="row">
+  <div class="whiteBackground greyBorder roundedCorners padding15px">
+    <form class="form-horizontal" action="{{ path("fos_user_security_check") }}" method="post">
+    	<input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+      <legend>Login</legend>
+      {% if error %}<div class="alert alert-error">{{ error|trans({}, 'FOSUserBundle') }}</div>{% endif %}
+      <div class="control-group">
+        <label class="control-label" for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
+        <div class="controls">
+          <input type="text" id="username" name="_username" value="{{ last_username }}" autofocus required>
+        </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label" for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
+        <div class="controls">
+          <input type="password" id="password" name="_password" required>
+        </div>
+      </div>
+      <div class="control-group">
+        <div class="controls">
+          <label class="checkbox">
+            <input type="checkbox" id="remember_me" name="_remember_me" value="on"> {{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}
+          </label>
+          <button type="submit" name="_submit" class="btn btn-primary">{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+{% endblock %}
