--- a/app/Resources/views/Form/fields.html.twig
+++ b/app/Resources/views/Form/fields.html.twig
@@ -1,9 +1,37 @@
 {% block field_row %}
 {% spaceless %}
-    <fieldset>
-        {{ form_label(form) }}
-        {{ form_errors(form) }}
-        {{ form_widget(form) }}
-    </fieldset>
+	<div class="control-group {% if form_errors(form) %}error{% endif %}">
+    {{ form_label(form) }}
+    <div class="controls">
+      {{ form_widget(form) }}
+      {{ form_errors(form) }}
+    </div>
+  </div>
 {% endspaceless %}
 {% endblock field_row %}
+
+{% block form_label %}
+{% spaceless %}
+    {% if not compound %}
+        {% set label_attr = label_attr|merge({'for': id}) %}
+    {% endif %}
+    {% if label is empty %}
+        {% set label = name|humanize %}
+    {% endif %}
+    <label class="control-label"{% for attrname, attrvalue in label_attr %} {{ attrname }}="{{ attrvalue }}"{% endfor %}>{{ label|trans({}, translation_domain) }}</label>
+{% endspaceless %}
+{% endblock form_label %}
+
+{% block form_errors %}
+{% spaceless %}
+    {% if errors|length > 0 %}
+    <span class="help-inline">
+    	{% for error in errors %}
+            {{error.messagePluralization is null
+                ? error.messageTemplate|trans(error.messageParameters, 'validators')
+                : error.messageTemplate|transchoice(error.messagePluralization, error.messageParameters, 'validators')}}
+        {% endfor %}
+    </span>
+    {% endif %}
+{% endspaceless %}
+{% endblock form_errors %}
