UserBundle re-implementation
Re-implemented the UserBundle for the new Bootstrap layout.

--- a/src/Arctic/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
+++ b/src/Arctic/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
@@ -4,10 +4,10 @@
 			<h5>{{ app.user.name }}</h5>
 		</div>
 		<ul class="nav nav-tabs nav-stacked whiteBackground">
-			<li class="active">
+			<li>
 				<a href="{{ path('fos_user_profile_edit') }}">Account</a>
 			</li>
-			<li>
+			<li  class="active">
 				<a href="{{ path('fos_user_change_password') }}">Password</a>
 			</li>
 		</ul>
@@ -21,12 +21,12 @@
 	            </div>
 	        {% endfor %}
 	    {% endfor %}
-		<form action="{{ path('fos_user_profile_edit') }}" {{ form_enctype(form) }} method="post" class="form-horizontal">
-			<legend>Account</legend>
+		<form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="post" class="form-horizontal">
+			<legend>Password</legend>
 			{{ form_widget(form) }}
 			<div class="control-group">
 				<div class="controls">
-					<button type="submit" class="btn btn-primary">{{ 'profile.edit.submit'|trans({}, 'FOSUserBundle') }}</button>
+					<button type="submit" class="btn btn-primary">{{ 'change_password.submit'|trans({}, 'FOSUserBundle') }}</button>
 				</div>
 			</div>
 		</form>
