--- a/src/Arctic/AssetBundle/Resources/views/Asset/new_asset.html.twig
+++ b/src/Arctic/AssetBundle/Resources/views/Asset/new_asset.html.twig
@@ -1,54 +1,15 @@
 {% extends '::base.html.twig' %}
 
 {% block content %}
-<article class="module width_full">
-	<header>
-		<h3>Post New Article</h3>
-	</header>
-	<div class="module_content">
-		<fieldset>
-			<label>Post Title</label>
-			<input type="text"></fieldset>
-		<fieldset>
-			<label>Content</label>
-			<textarea rows="12"></textarea>
-		</fieldset>
-		<fieldset style="width:48%; float:left; margin-right: 3%;">
-			<!-- to make two field float next to one another, adjust values accordingly -->
-			<label>Category</label>
-			<select style="width:92%;">
-				<option>Articles</option>
-				<option>Tutorials</option>
-				<option>Freebies</option>
-			</select>
-		</fieldset>
-		<fieldset style="width:48%; float:left;">
-			<!-- to make two field float next to one another, adjust values accordingly -->
-			<label>Tags</label>
-			<input type="text" style="width:92%;"></fieldset>
-		<div class="clear"></div>
-	</div>
-	<footer>
-		<div class="submit_link">
-			<select>
-				<option>Draft</option>
-				<option>Published</option>
-			</select>
-			<input type="submit" value="Publish" class="alt_btn">
-			<input type="submit" value="Reset"></div>
-	</footer>
-</article>
-<!-- end of post new article -->
-<article class="module width_full">
-	<header>
-		<h3>Post New Article</h3>
-	</header>
-	<form action="" method="post" {{ form_enctype(form) }}>
-		<div class="module_content">
+<div class="row-fluid">
+	<div class="span8 whiteBackground greyBorder roundedCorners padding15px">
+		<form action="" method="post" {{ form_enctype(form) }}>
+			<legend>Add new asset</legend>
 			{{ form_widget(form) }}
-			<input type="submit" />
-		</div>
-	</form>
-</article>
-<div class="clear"></div>
+			<div>
+			  <button type="submit" class="btn btn-primary">Save changes</button>
+			</div>
+		</form>
+	</div>
+</div>
 {% endblock %}
