--- a/src/Arctic/AssetBundle/Resources/views/Asset/assets.html.twig
+++ b/src/Arctic/AssetBundle/Resources/views/Asset/assets.html.twig
@@ -32,11 +32,14 @@
 	</div>
 	<!--/span-->
 	<div class="span9">
-		<div class="alert alert-success">
-			<button type="button" class="close" data-dismiss="alert">×</button>
-			Asset with serialnumber <strong>st7swusa</strong>
-			added.
-		</div>
+		{% for type, flashMessages in app.session.flashbag.all() %}
+	        {% for flashMessage in flashMessages %}
+	            <div class="alert alert-{{ type }}">
+	            	<button type="button" class="close" data-dismiss="alert">×</button>
+	            	{{ flashMessage }}
+	            </div>
+	        {% endfor %}
+	    {% endfor %}
 		<section class="whiteBackground greyBorder roundedCorners">
 			<table class="table table-hover">
 				<thead>
