--- a/src/Arctic/AssetBundle/Resources/views/Category/edit.html.twig
+++ b/src/Arctic/AssetBundle/Resources/views/Category/edit.html.twig
@@ -1,3 +1,6 @@
+{% extends ':Common:span8nonav.html.twig' %}
+
+{% block mainSpan %}
 <h1>Category edit</h1>
 
 <form action="{{ path('category_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
@@ -20,3 +23,4 @@
         </form>
     </li>
 </ul>
+{% endblock %}
