--- a/src/Arctic/AssetBundle/Resources/views/Category/new.html.twig
+++ b/src/Arctic/AssetBundle/Resources/views/Category/new.html.twig
@@ -1,16 +1,14 @@
+{% extends ':Common:span8nonav.html.twig' %}
+
+{% block mainSpan %}
 <h1>Category creation</h1>
 
 <form action="{{ path('category_create') }}" method="post" {{ form_enctype(form) }}>
     {{ form_widget(form) }}
-    <p>
-        <button type="submit">Create</button>
-    </p>
+    <div>
+    	<button type="submit" class="btn btn-primary">Create</button>
+    </div>
 </form>
 
-<ul class="record_actions">
-    <li>
-        <a href="{{ path('category') }}">
-            Back to the list
-        </a>
-    </li>
-</ul>
+<a href="{{ path('category') }}">Back to the list</a>
+{% endblock %}
