--- a/app/Resources/views/Common/span8nonav.html.twig
+++ b/app/Resources/views/Common/span8nonav.html.twig
@@ -2,10 +2,16 @@
 
 {% block content %}
 <div class="row-fluid">
-  <div class="span8">
-    <section class="whiteBackground greyBorder roundedCorners padding15px">
-    	{% block mainSpan %}{% endblock %}
-    </section>
-   </div>
+	<div class="span8 whiteBackground greyBorder roundedCorners padding15px">
+		{% for type, flashMessages in app.session.flashbag.all() %}
+	        {% for flashMessage in flashMessages %}
+	            <div class="alert alert-{{ type }}">
+	            	<button type="button" class="close" data-dismiss="alert">×</button>
+	            	{{ flashMessage }}
+	            </div>
+	        {% endfor %}
+	    {% endfor %}
+		{% block mainSpan %}{% endblock %}
+	</div>
 </div>
 {% endblock %}
