--- a/src/Arctic/AssetBundle/Resources/views/Category/show.html.twig
+++ b/src/Arctic/AssetBundle/Resources/views/Category/show.html.twig
@@ -10,6 +10,10 @@
             <td>{{ entity.id }}</td>
         </tr>
         <tr>
+            <th>Name</th>
+            <td>{{ entity.name }}</td>
+        </tr>
+        <tr>
             <th>Created</th>
             <td>{{ entity.created|date('Y-m-d H:i:s') }}</td>
         </tr>
@@ -17,22 +21,14 @@
             <th>Updated</th>
             <td>{{ entity.updated|date('Y-m-d H:i:s') }}</td>
         </tr>
-        <tr>
-            <th>Name</th>
-            <td>{{ entity.name }}</td>
-        </tr>
     </tbody>
 </table>
 
-<a class="btn" href="{{ path('category') }}">
-    Back to the list
-</a>
-<a class="btn" href="{{ path('category_edit', { 'id': entity.id }) }}">
-    Edit
-</a>
 <form class="form-inline" action="{{ path('category_delete', { 'id': entity.id }) }}" method="post">
     {{ form_widget(delete_form.id) }}
     {{ form_widget(delete_form._token) }}
+    <a class="btn" href="{{ path('category') }}">Back to the list</a>
+    <a class="btn" href="{{ path('category_edit', { 'id': entity.id }) }}">Edit</a>
     <button type="submit" class="btn btn-danger">Delete</button>
 </form>
 {% endblock %}
