--- a/src/Arctic/AssetBundle/Resources/views/Owner/edit.html.twig
+++ b/src/Arctic/AssetBundle/Resources/views/Owner/edit.html.twig
@@ -1,22 +1,13 @@
-<h1>Owner edit</h1>
+{% extends ':Common:span8nonav.html.twig' %}
+
+{% block mainSpan %}
+<h1>Edit {{ entity.name }}</h1>
 
 <form action="{{ path('owner_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
     {{ form_widget(edit_form) }}
     <p>
-        <button type="submit">Edit</button>
+        <button type="submit" class="btn btn-primary">Save</button>
+        <a href="{{ path('owner') }}" class="btn">Cancel</a>
     </p>
 </form>
-
-<ul class="record_actions">
-    <li>
-        <a href="{{ path('owner') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <form action="{{ path('owner_delete', { 'id': entity.id }) }}" method="post">
-            {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
-        </form>
-    </li>
-</ul>
+{% endblock %}
