--- a/src/Arctic/AssetBundle/Resources/views/Owner/new.html.twig
+++ b/src/Arctic/AssetBundle/Resources/views/Owner/new.html.twig
@@ -1,16 +1,13 @@
-<h1>Owner creation</h1>
+{% extends ':Common:span8nonav.html.twig' %}
+
+{% block mainSpan %}
+<h1>New owner</h1>
 
 <form action="{{ path('owner_create') }}" method="post" {{ form_enctype(form) }}>
     {{ form_widget(form) }}
-    <p>
-        <button type="submit">Create</button>
-    </p>
+    <div>
+        <button type="submit" class="btn btn-primary">Create</button>
+        <a href="{{ path('owner') }}" class="btn">Cancel</a>
+    </div>
 </form>
-
-<ul class="record_actions">
-    <li>
-        <a href="{{ path('owner') }}">
-            Back to the list
-        </a>
-    </li>
-</ul>
+{% endblock %}
