--- a/src/Arctic/AssetBundle/Resources/views/Owner/owners.html.twig
+++ b/src/Arctic/AssetBundle/Resources/views/Owner/owners.html.twig
@@ -1,13 +1,16 @@
-<h1>Owner list</h1>
+{% extends ':Common:span8nonav.html.twig' %}
 
-<table class="records_list">
+{% block mainSpan %}
+<h1>Owners list</h1>
+
+<table class="table table-striped table-bordered">
     <thead>
         <tr>
             <th>Id</th>
-            <th>Created</th>
-            <th>Updated</th>
             <th>Name</th>
             <th>Description</th>
+            <th>Created</th>
+            <th>Updated</th>
             <th>Actions</th>
         </tr>
     </thead>
@@ -15,29 +18,18 @@
     {% for entity in entities %}
         <tr>
             <td><a href="{{ path('owner_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-            <td>{% if entity.created %}{{ entity.created|date('Y-m-d H:i:s') }}{% endif %}</td>
-            <td>{% if entity.updated %}{{ entity.updated|date('Y-m-d H:i:s') }}{% endif %}</td>
             <td>{{ entity.name }}</td>
             <td>{{ entity.description }}</td>
+            <td>{% if entity.created %}{{ entity.created|date('Y-m-d H:i:s') }}{% endif %}</td>
+            <td>{% if entity.updated %}{{ entity.updated|date('Y-m-d H:i:s') }}{% endif %}</td>
             <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('owner_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('owner_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
+                <a href="{{ path('owner_show', { 'id': entity.id }) }}"><i class="icon-search"></i></a>
+                <a href="{{ path('owner_edit', { 'id': entity.id }) }}"><i class="icon-pencil"></i></a>
             </td>
         </tr>
     {% endfor %}
     </tbody>
 </table>
 
-<ul>
-    <li>
-        <a href="{{ path('owner_new') }}">
-            Create a new entry
-        </a>
-    </li>
-</ul>
+<a href="{{ path('owner_new') }}" class="btn btn-success">Create a new entry</a>
+{% endblock %}
