Added locations and new datafields to owners and assets

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -58,6 +58,7 @@
                       <li><a href="{{ path('owner') }}">Owners</a></li>
                       <li><a href="{{ path('type') }}">Types</a></li>
                       <li><a href="{{ path('category') }}">Categories</a></li>
+                      <li><a href="{{ path('location') }}">Locations</a></li>
                     </ul>
                   </li>
                 </ul>
